--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Green Api</title>
     <script defer src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script defer src="/index.js"></script>
-    <link rel="stylesheet" href="/style.css" />
+    <script defer src="./index.js"></script>
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <main>
